tests/compile_fail/unwrap_or_cant_use_both.stderr
error: `unwrap_or` cannot be used with `into_unwrap_or` or `from_unwrap_or` at age
 --> tests/compile_fail/unwrap_or_cant_use_both.rs:7:10
  |
7 | #[derive(From)]
  |          ^^^^
  |
  = note: this error originates in the derive macro `From` (in Nightly builds, run with -Z macro-backtrace for more info)
